--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   code_quality:
     runs-on: ubuntu-latest
-    name: Checks with blacks, isort
+    name: Checks with black and isort
     container: python:3.9
 
     steps:
