--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -26,7 +26,7 @@ jobs:
         run:
           isort --check .
 
-      - name: Step To run on failure
+      - name: Notify if failure
         if: ${{ failure() }}
         uses: appleboy/telegram-action@master
         with:
