--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -3,6 +3,8 @@ name: Code Quality
 on:
   push:
     branches: [ feature/* ]
+    branches-ignore:
+      - 'pipeline/CI_*'
 
 jobs:
   code_quality:
