--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
         with:
           github_token: ${{ secrets.REPOS_TOKEN }}
 
-      - name: Add label develop
+      - name: Set label develop
         uses: actions-ecosystem/action-add-labels@v1
         with:
           labels: develop
