--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -15,16 +15,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run script
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Black check
-        run:
-          black --check .
+        run: black --check .
 
       - name: Isort check
-        run:
-          isort --check .
+        run: isort --check .
 
       - name: Notify if failure
         if: ${{ failure() }}
