--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
-name: Build
+name: Release
 
 on:
-  pull_request:
-    branches: [ develop ]
+  push:
+    branches: [ master ]
     paths-ignore:
       - 'README.md'
       - '.gitignore'
@@ -16,7 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       get_current_tag: ${{ steps.set_current_tag_id.outputs.current_tag }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -27,12 +26,13 @@ jobs:
         with:
           github_token: ${{ secrets.REPOS_TOKEN }}
 
-      - name: Set label develop
+      - name: Set label release
         uses: actions-ecosystem/action-add-labels@v1
         with:
-          labels: develop
+          labels: release
 
-      - uses: actions-ecosystem/action-add-assignees@v1
+      - name: Add author as assignees
+        uses: actions-ecosystem/action-add-assignees@v1
         with:
           assignees: ${{ github.actor }}
           github_token: ${{ secrets.REPOS_TOKEN }}
@@ -53,8 +53,53 @@ jobs:
             <b>Failed job:</b> https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
             See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
 
+
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: prepare
+    outputs:
+      get_release_url: ${{ steps.set_release_url.outputs.release_url }}
+    steps:
+
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v3
+        with:
+          configuration: "changelog.json"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPOS_TOKEN }}
+        with:
+          tag_name: ${{ needs.prepare.outputs.get_current_tag }}
+          release_name: Release ${{ needs.prepare.outputs.get_current_tag }}
+          body: ${{ needs.prepare.outputs.get_current_tag }}
+
+      - name: Set Release URL
+        id: set_release_url
+        run: echo "::set-output name=release_url::${{ steps.create_release.outputs.upload_url }}"
+
+      - name: Step To run on failure
+        if: ${{ failure() }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          format: html
+          message: |
+            <b>!!! FAILED !!!</b>
+            <b>Failed job:</b> https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+
+
   build:
     name: Build packages
+    needs: [ prepare, release ]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -71,9 +116,7 @@ jobs:
             ASSET_MIME: application/x-binary
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
@@ -94,7 +137,18 @@ jobs:
           path: ./dist/${{ matrix.OUT_FILE_NAME }}
           retention-days: 1
 
-      - name: Notify if failure
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.release.outputs.get_release_url }}
+          asset_path: ./dist/${{ matrix.OUT_FILE_NAME }}
+          asset_name: ${{ matrix.OUT_FILE_NAME }}
+          asset_content_type: ${{ matrix.ASSET_MIME }}
+
+      - name: Step To run on failure
         if: ${{ failure() }}
         uses: appleboy/telegram-action@master
         with:
@@ -110,10 +164,10 @@ jobs:
   telegram:
     runs-on: ubuntu-latest
     name: Notification
-    needs: [ prepare, build ]
+    needs: [ prepare, release, build ]
 
     steps:
-      - name: Notify after Packaging
+      - name: Notify telegram message after Released
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_CHAT }}
@@ -124,12 +178,12 @@ jobs:
 
             <b>WorkFlows:</b> <a href="https://github.com/${{ github.repository }}/actions">ActionsList</a>
 
-            Commit with tag: ${{ needs.prepare.outputs.get_current_tag }}
+            Commit with tag: ${{ needs.release.outputs.get_current_tag }}
 
             Repository: ${{ github.repository }}
 
             Branch: ${{ github.ref }}
 
-            <b>Artifacts:</b> https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            <b>Release URL:</b> https://github.com/${{ github.repository }}/releases/tag/${{ needs.release.outputs.get_current_tag }}
 
             See changes: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
