--- a/.github/workflows/ignore.yaml
+++ b/.github/workflows/ignore.yaml
@@ -8,6 +8,7 @@ on:
     paths-ignore:
       - 'README.md'
       - '.gitignore'
+      - '.github/**'
       - 'changelog.json'
       - 'test-pyt-ser.service'
 
